# macho_analyzer

./: .clang-format  .gitignore  CMakeLists.txt  build_and_test.bat
cmake/: xllvmdemangler.cmake
src/: analyzer_main.cpp  demangle.cpp  demangle.h  macho_parser.cpp  macho_parser.h  macho_section.cpp  macho_section.h  macho_segment.cpp  macho_segment.h  macho_symbol.cpp  macho_symbol.h  utility.h
